--- a/main.ipynb
+++ b/main.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "### Chess Problem Solver\n",
     "\n",
-    "Define the initial info such as logging"
+    "### Define the initial info such as logging"
    ]
   },
   {
